--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Share+Tech+Mono&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -20,6 +21,7 @@ body {
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    
 }
 .main__title {
     display: flex;
@@ -123,13 +125,64 @@ div {
     font-size: 60px;
     letter-spacing: 1px;
    }
+
+   .text__text {
+    color: white;
+    font-size: 20px;
+    font-family: 'Share Tech Mono', monospace;
+   }
  
-   .cursor {
+   .text__cursor {
     opacity: 0;
     transition: .2s;
+    color: white;
+    font-size: 20px;
+    
    }
  
  
-   .cursor.active {
+   .text__cursor.active {
     opacity: 1;
    }
+
+   .timer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
+    color: white;
+    top:35%;
+    left: 50%;
+    transform: translate(-50%, -250%);
+    font-size: 30px;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    
+   }
+   .timer__span, .timer__counting {
+    font-family: 'Press Start 2P', cursive;
+margin-top: 20px;
+   }
+  
+   @media (min-width: 768px) {
+    .timer {
+        font-size: 50px;
+    }
+}
+.timer.active {
+    animation: gameStarter .6s linear both;
+} 
+@keyframes gameStarter {
+    0% {
+        transform: translate(-50%, -250%);
+        opacity: 1;
+    }
+    80% {
+        transform: translate(-50%, -30%);
+    }
+    100% {
+        transform: translate(-50%, -50%);
+    
+    }
+}
