--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ margin-top: 20px;
 animation: tittle_disappear 1.5s 1s linear both
 }
 
-.main__button {
+.main__button, .lose__button {
     text-align: center;
     width: 300px;
     height: 50px;
@@ -148,7 +148,7 @@ animation: tittle_disappear 1.5s 1s linear both
     opacity: 1;
    }
 
-   .timer {
+   .timer, .lose {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -169,7 +169,7 @@ margin-top: 20px;
    }
   
    @media (min-width: 768px) {
-    .timer {
+    .timer, .lose {
         font-size: 50px;
     }
 }
@@ -270,4 +270,22 @@ height: 12vh;
 }
 @media (min-width: 1440px) {
     
+}
+
+.lose {
+    top:80%;
+    animation: loseAnimation 1s linear both;
+}
+@keyframes loseAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        color: yellow;
+    
+    }
+}
+.lose__button {
+color: white;
 }
